# linger-experiment

./: Makefile  README.md  build.sh  pyproject.toml  requirements.txt
experiments/: __init__.py
experiments/common/: __init__.py  judges.py  naming.py  persona.py  retrieval.py  stats.py  systems.py
experiments/e5_memory_honesty/: __init__.py  analyze.py  probes.py  run.py
experiments/e6_persona_consistency/: __init__.py  analyze.py  run.py  scripts.py
experiments/synthetic_sanity_checks/: __init__.py
figures/: __init__.py  plot_memory_honesty.py
results/e5/: bare.json  linger_full.json  linger_no_factmem.json  rag.json  stats.json
results/e6/: bare.json  linger_full.json  linger_no_factmem.json  rag.json  stats.json
